# amdkiit

./: .gitmodules  LICENSE  README.md
source/: CMakeLists.txt  apply_pbc.f90  atom.f90  atom_info.f90  atomic_basis.f90  backtracking.f90  bessel_func.f90  bfgs_mod.f90  cg.f90  constants.f90  density.f90  do_opt.f90  eprint.f90  exp_igr.f90  fft_interface.f90  fft_support.f90  function_val.f90  gradient.f90  gvectors.f90  init_module.f90  interpolgrid.f90  kinds.f90  lbfgs.f  lsfbtr.f90  main.f90  math.f90  max_parameter_pp.f90  md_tools.f90  molecular_dynamics.f90  mympi.f90  nuclear_grad.f90  pbc.f90  potential.f90  print.f90  print_logo_amdkiit.f90  pseudopotential.f90  random.f90  read_pp_file.f90  readpsp.f90  readstring.f90  (+18 more)
tests/1_water/geo_opt/: O_MT_LDA.psp  amdkiit.out  amdkiit_h2o.401160.err  atom_coord.xyz  input.yaml  log.o401160  submit_p.sh
tests/1_water/md/: MD_TRAJECTORY.xyz  amdkiit.out  amdkiit_h2o.401335.err  input.yaml  log.o401335
tests/1_water/md/serial/: H_MT_LDA.psp  MD_TRAJECTORY.xyz  amdkiit.out  amdkiit_h2o.401225.err  input.yaml  log.o401225  submit_p.sh
tests/1_water/wf_opt/: amdkiit.out  amdkiit_h2o.401187.err  input_coordinate.xyz  log.o401187  submit_p.sh
tests/2_water/geo_opt/: amdkiit.out  amdkiit_2h2o.401211.err  atom_coord.xyz  input.yaml  log.o401211  submit_p.sh
tests/2_water/md/: MD_TRAJECTORY.xyz  amdkiit.out  input.yaml  input_coordinate.xyz  submit_p.sh
tests/2_water/wf_opt/: amdkiit.out  amdkiit_h2o.401170.err  input.yaml  log.o401170
tests/32_water/md/: 32H2O.o1039982  MD_TRAJECTORY.xyz  amdkiit.out  submit.sh
tests/32_water/wf_opt/: amdkiit.out  amdkiit_32h2o.401204.err  input.yaml  input_coordinate.xyz  log.o401204
tests/H2_upf/: H.upf  O.upf  input.yaml  input_coordinate.xyz  submit_p.sh
tests/O2/singlet_sp_cube/: amdkiit.out  amdkiit_O2.401173.err  input.yaml  input_coordinate.xyz  log.o401173  submit_p.sh
tests/O2/triplet_sp_cube/: amdkiit.out  amdkiit_O2.401172.err  input.yaml  input_coordinate.xyz  log.o401172  rho_spin.cube  submit_p.sh
tests/bulk_si/geo_opt/: amdkiit.out  amdkiit_2Si.401210.err  atom_coord.xyz  input.yaml  input_coordinate.xyz  log.o401210  submit_p.sh
tests/bulk_si/single_point/: Si_MT_LDA.psp  amdkiit.out  amdkiit_32h2o.401208.err  input.yaml  input_coordinate.xyz  log.o401208  submit_p.sh
